add vdbe source and headers to enclave project

--- a/sqlite/sqlite.vcxproj.filters
+++ b/sqlite/sqlite.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Generated Files">
+      <UniqueIdentifier>{791538c4-092d-4bc9-9b2c-5c13621420c8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="alter.c">
@@ -294,6 +297,9 @@
     <ClCompile Include="fts3_term.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="vdbe_u.c">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="btree.h">
@@ -407,8 +413,16 @@
     <ClInclude Include="sqlite3rtree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="vdbe_u.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\vdbe\vdbe.edl">
+      <Filter>Source Files</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
