--- a/vdbe/vdbe.vcxproj.filters
+++ b/vdbe/vdbe.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="vdbesort.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main_copy.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vdbe_t.h">
