add config and status support in enclave

--- a/vdbe/vdbe.vcxproj
+++ b/vdbe/vdbe.vcxproj
@@ -188,10 +188,10 @@
   <ItemGroup>
     <ClCompile Include="..\sqlite\global.c" />
     <ClCompile Include="..\sqlite\mem1.c" />
-    <ClCompile Include="..\sqlite\status.c" />
     <ClCompile Include="..\sqlite\util.c" />
-    <ClCompile Include="main_copy.c" />
+    <ClCompile Include="main.c" />
     <ClCompile Include="malloc.c" />
+    <ClCompile Include="status.c" />
     <ClCompile Include="vdbe.c" />
     <ClCompile Include="vdbe.cpp" />
     <ClCompile Include="vdbeapi.c" />
