--- a/sqlite/sqlite.vcxproj
+++ b/sqlite/sqlite.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="date.c" />
     <ClCompile Include="dbstat.c" />
     <ClCompile Include="delete.c" />
+    <ClCompile Include="edge_u.c" />
     <ClCompile Include="expr.c" />
     <ClCompile Include="fault.c" />
     <ClCompile Include="fkey.c" />
