--- a/vdbe/vdbe.vcxproj
+++ b/vdbe/vdbe.vcxproj
@@ -101,7 +101,7 @@
       <Optimization>Disabled</Optimization>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>../sqlite;$(SGXSDKInstallPath)include;$(SGXSDKInstallPath)include\tlibc;$(SGXSDKInstallPath)include\stlport;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>SQLITE_CORE;SQLITE_THREADSAFE=0;SQLITE_OMIT_LOAD_EXTENSION;SQLITE_OMIT_SHARED_CACHE;SQLITE_OMIT_PROGRESS_CALLBACK;SQLITE_OMIT_DEPRECATED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SQLITE_CORE;SQLITE_THREADSAFE=0;SQLITE_OMIT_LOAD_EXTENSION;SQLITE_OMIT_SHARED_CACHE;SQLITE_OMIT_PROGRESS_CALLBACK;SQLITE_OMIT_DEPRECATED;SQLITE_WITHOUT_MSIZE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>sgx_trts.lib;sgx_tstdc.lib;sgx_tservice.lib;sgx_tcrypto_opt.lib</AdditionalDependencies>
@@ -188,11 +188,11 @@
   <ItemGroup>
     <ClCompile Include="..\sqlite\global.c" />
     <ClCompile Include="..\sqlite\mem1.c" />
-    <ClCompile Include="..\sqlite\util.c" />
     <ClCompile Include="edge_t.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="malloc.c" />
     <ClCompile Include="status.c" />
+    <ClCompile Include="util.c" />
     <ClCompile Include="vdbe.c" />
     <ClCompile Include="vdbe.cpp" />
     <ClCompile Include="vdbeapi.c" />
@@ -226,6 +226,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectName)_t.h;$(ProjectName)_t.c;%(Outputs)</Outputs>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">vdbe.config.xml;%(AdditionalInputs)</AdditionalInputs>
     </CustomBuild>
+    <None Include="ClassDiagram.cd" />
     <None Include="README.md" />
     <None Include="vdbe_private.pem" />
   </ItemGroup>
