--- a/vdbe/vdbe.vcxproj.filters
+++ b/vdbe/vdbe.vcxproj.filters
@@ -18,9 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="vdbe_t.c">
-      <Filter>Generated Files</Filter>
-    </ClCompile>
     <ClCompile Include="vdbe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -48,9 +45,6 @@
     <ClCompile Include="..\sqlite\global.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\sqlite\util.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\sqlite\mem1.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -63,16 +57,22 @@
     <ClCompile Include="edge_t.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="vdbe_t.c">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
+    <ClCompile Include="util.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="vdbe_t.h">
-      <Filter>Generated Files</Filter>
-    </ClInclude>
     <ClInclude Include="vdbe.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vdbeInt.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vdbe_t.h">
+      <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +80,7 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="README.md" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="vdbe.config.xml">
